--- a/src/eink_config.json
+++ b/src/eink_config.json
@@ -1,19 +1,13 @@
 {
-  "web_server_url": "http://localhost:5001/display",
+  "web_server_url": "http://localhost:5001/display?test=true",
   "screenshot_path": "/tmp/sports_display.png",
   "display_width": 800,
   "display_height": 480,
-  "screenshot_scale": 2,
+  "screenshot_scale": 1,
   "refresh_interval": "120",
+  "apply_dithering": true,
+  "dither_saturation": 0.8,
   "max_retries": 3,
   "retry_delay": 5,
-  "_comment": "Configuration for eink display controller",
-  "_intervals": {
-    "_comment": "Common refresh intervals (in seconds)",
-    "1_minute": 60,
-    "5_minutes": 300,
-    "15_minutes": 900,
-    "30_minutes": 1800,
-    "1_hour": 3600
-  }
+  "_comment": "Configuration for eink display controller"
 }
