Enabled dummy data by default while testing legibility

--- a/src/eink_config.json
+++ b/src/eink_config.json
@@ -5,7 +5,7 @@
   "display_height": 480,
   "screenshot_scale": 1,
   "refresh_interval": "120",
-  "apply_dithering": true,
+  "apply_dithering": false,
   "dither_saturation": 0.8,
   "max_retries": 3,
   "retry_delay": 5,
