--- a/src/eink_config.json
+++ b/src/eink_config.json
@@ -1,5 +1,5 @@
 {
-  "web_server_url": "http://localhost:5001/display?test=true",
+  "web_server_url": "http://localhost:5001/display",
   "screenshot_path": "/tmp/sports_display.png",
   "display_width": 800,
   "display_height": 480,
