Couple more logic tweaks

--- a/src/config/game-status-config.json
+++ b/src/config/game-status-config.json
@@ -12,11 +12,7 @@
     "pre-game",
     "suspended"
   ],
-  "scheduledGameStatuses": [
-    "pm et",
-    "am et", 
-    "scheduled"
-  ],
+  "scheduledGameStatuses": ["pm et", "am et", "scheduled"],
   "finalGameStatuses": [
     "final",
     "game over",
