More status trasnform logic

--- a/src/config/game-status-config.json
+++ b/src/config/game-status-config.json
@@ -10,7 +10,8 @@
     "delay",
     "warmup",
     "pre-game",
-    "suspended"
+    "suspended",
+    "challenge"
   ],
   "scheduledGameStatuses": ["pm et", "am et", "scheduled"],
   "finalGameStatuses": [
