--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pytz>=2023.3
 Pillow>=9.0.0
 flask>=2.3.0
 flask-cors>=4.0.0
+feedparser>=6.0.0
 inky>=1.5.0
 playwright>=1.40.0
 git+https://github.com/hbldh/hitherdither.git
