--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ flask-cors>=4.0.0
 feedparser>=6.0.0
 inky>=1.5.0
 playwright>=1.40.0
+psutil>=5.9.0
 git+https://github.com/hbldh/hitherdither.git
 black>=23.0.0
 ruff>=0.1.0
